<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/login_textView_loginyouraccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_tv_loginyouraccount"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/login_editText_usernameenmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/login_et_usernameemail"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/login_editText_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/login_et_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_btn_signin" />

    <TextView
        android:id="@+id/login_textView_notregister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_tv_notregister"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/login_button_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button_signup" />

    <TextView
        android:id="@+id/login_textView_socialnetwork"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_tv_signinsocial"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/login_button_facebooklogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button_facebook" />

    <Button
        android:id="@+id/login_button_twitterlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button_twitter" />

    <Button
        android:id="@+id/login_button_googlelogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button_googleplus" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/add1" />

</LinearLayout>