<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/noti_age"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Spinner
                android:id="@+id/noti_spinner_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:prompt="@string/app_name" />

        </LinearLayout>
    </ScrollView>

    <Spinner
        android:id="@+id/noti_spinner_howlong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/noti_spinner_howmany"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noti_tv_moti"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <CheckBox
        android:id="@+id/noti_checkBox_pleasure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noti_cb_moti_pleasure" />

    <CheckBox
        android:id="@+id/noti_checkBox_nicotin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noti_cb_moti_nicotine" />

    <CheckBox
        android:id="@+id/noti_checkBox_weightloss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noti_cb_moti_weightloss" />

    <CheckBox
        android:id="@+id/noti_checkBox_relaxation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noti_cb_moti_relaxation" />

    <CheckBox
        android:id="@+id/noti_checkBox_beingsmart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noti_cb_moti_beingsmart" />

    <CheckBox
        android:id="@+id/noti_checkBox_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noti_cb_other" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:ems="10" >

        <requestFocus />
    </EditText>

</LinearLayout>